fix: header alignment feat: respect notification timeout

--- a/astal/mystyle.scss
+++ b/astal/mystyle.scss
@@ -7,7 +7,7 @@
 
 window {
   font-family: monospace;
-  font-size: 16px;
+  font-size: 18px;
 
 }
 
@@ -18,7 +18,6 @@ window {
 
 .bar {
   font-weight: bold;
-  font-size: 18px;
   background-color: $clr-13;
 
   .info > * {
